--- a/FingerPrintingAPI/FingerPrintingAPI/FingerPrintingAPI.csproj
+++ b/FingerPrintingAPI/FingerPrintingAPI/FingerPrintingAPI.csproj
@@ -190,6 +190,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\HashAlgorithm.cs" />
+    <Compile Include="Models\QueryResults.cs" />
+    <Compile Include="Models\WinUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -204,7 +207,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
