--- a/FingerPrintingAPI/FingerPrintingAPI/Web.config
+++ b/FingerPrintingAPI/FingerPrintingAPI/Web.config
@@ -5,7 +5,13 @@
   -->
 <configuration>
   <appSettings>
+    
   </appSettings>
+  <connectionStrings>
+    <clear/>
+    <add name="FingerprintConnectionString" connectionString="Data Source=localhost;Initial Catalog=FingerprintsDb;Integrated Security=True; Connection Timeout=15;" providerName="System.Data.SqlClient"/>
+
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
