--- a/FingerPrintingAPI/FingerPrintingAPI/Web.config
+++ b/FingerPrintingAPI/FingerPrintingAPI/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <appSettings>
-    
+
   </appSettings>
   <connectionStrings>
     <clear/>
@@ -14,14 +14,22 @@
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" maxRequestLength="1048576" executionTimeout="3600"/>
+    
   </system.web>
-  
-<system.webServer>
+
+  <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-  </system.webServer></configuration>
+
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="1073741824" />
+      </requestFiltering>
+    </security>
+  </system.webServer>
+</configuration>
