--- a/FingerPrintingAPI/WindowsFormsClient/WindowsFormsClient.csproj
+++ b/FingerPrintingAPI/WindowsFormsClient/WindowsFormsClient.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AudioRequest.cs" />
     <Compile Include="SearchUsingService.cs">
       <SubType>Form</SubType>
     </Compile>
