adding SelfHostApi for windows service

--- a/WebClient/Web.config
+++ b/WebClient/Web.config
@@ -11,6 +11,9 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-WebClient-99282229-0a62-4d2a-8214-20f7e81cd8d5;AttachDbFilename=|DataDirectory|\aspnet-WebClient-99282229-0a62-4d2a-8214-20f7e81cd8d5.mdf;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
   </connectionStrings>
+  <appSettings>
+    <add key="ServiceUrl" value="http://localhost:9999"/>
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
