--- a/Deployed/Web.config
+++ b/Deployed/Web.config
@@ -15,7 +15,7 @@
     <add key="ServiceUrl" value="http://localhost:9999" />
   </appSettings>
   <system.web>
-    <compilation debug="true" batch="false" targetFramework="4.5">
+    <compilation batch="false" targetFramework="4.5">
       <assemblies>
         <add assembly="System.Net, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
         <add assembly="System.Net.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
