adding multiple files

--- a/FingerPrintingAPI/FingerPrintingAPI/Web.config
+++ b/FingerPrintingAPI/FingerPrintingAPI/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <appSettings>
-
+    <add key="TempFolderTemplate" value="D:\Dev\Temp\{0}{1}"/>
   </appSettings>
   <connectionStrings>
     <clear/>
@@ -42,7 +42,7 @@
 
     <security>
       <requestFiltering>
-        <requestLimits maxAllowedContentLength="1073741824" />
+        <requestLimits maxAllowedContentLength="107374182400" />
       </requestFiltering>
     </security>
   </system.webServer>
