adding configuration for web api fingerprinting setting

--- a/FingerPrintingAPI/FingerPrintingAPI/Web.config
+++ b/FingerPrintingAPI/FingerPrintingAPI/Web.config
@@ -6,6 +6,15 @@
 <configuration>
   <appSettings>
     <add key="TempFolderTemplate" value="D:\Dev\Temp\{0}{1}"/>
+    <add key="SecondsToAnalyze" value="10"/>
+    <add key="StartSecond" value="20"/>
+    <add key="MaxStride" value="512"/>
+    <add key="MinStride" value="256"/>
+    <add key="HashTables" value="25"/>
+    <add key="HashKeys" value="4"/>
+    <add key="TreshHold" value="5"/>
+    <add key="" value=""/>
+    <add key="" value=""/>
   </appSettings>
   <connectionStrings>
     <clear/>
