--- a/FingerPrintingAPI/FingerPrintingAPI/packages.config
+++ b/FingerPrintingAPI/FingerPrintingAPI/packages.config
@@ -1,16 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MathNet.Numerics" version="2.6.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.SelfHost" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="NAudio" version="1.7.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
-  <package id="SoundFingerprinting" version="2.0.0.0" targetFramework="net45" />
-  <package id="SoundFingerprinting.Audio.Bass" version="2.0.0.0" targetFramework="net45" />
-  <package id="SoundFingerprinting.Audio.NAudio" version="2.0.0.0" targetFramework="net45" />
+  <package id="SoundFingerprinting" version="2.0.1.0" targetFramework="net45" />
+  <package id="SoundFingerprinting.Audio.Bass" version="2.0.1.0" targetFramework="net45" />
+  <package id="SoundFingerprinting.Audio.NAudio" version="2.0.1.0" targetFramework="net45" />
   <package id="SoundFingerprinting.SQL" version="2.0.0" targetFramework="net45" />
 </packages>
