--- a/FingerPrintingAPI/SelfHostApi/App.config
+++ b/FingerPrintingAPI/SelfHostApi/App.config
@@ -6,10 +6,22 @@
   <appSettings>
     <add key="HostingUrl" value="http://localhost:9999"/>
     <add key="MaxReceivedMessageSize" value="1073741824"/>
+    <add key="TempFolderTemplate" value="D:\Dev\Temp\{0}{1}"/>
+    <add key="SecondsToAnalyze" value="10"/>
+    <add key="StartSecond" value="20"/>
+    <add key="MaxStride" value="512"/>
+    <add key="MinStride" value="256"/>
+    <add key="HashTables" value="25"/>
+    <add key="HashKeys" value="4"/>
+    <add key="TreshHold" value="5"/>
+    <add key="" value=""/>
+    <add key="" value=""/>
   </appSettings>
   <connectionStrings>
     <clear/>
-    <add name="FingerprintConnectionString" connectionString="Data Source=localhost;Initial Catalog=FingerprintsDb;Integrated Security=True; Connection Timeout=15;" providerName="System.Data.SqlClient"/>
+    <add name="FingerprintConnectionString"
+      connectionString="Data Source=localhost;Initial Catalog=FingerprintsDb;Integrated Security=True; Connection Timeout=15;"
+      providerName="System.Data.SqlClient"/>
 
   </connectionStrings>
 </configuration>
