--- a/FingerPrintingAPI/SelfHostApi/SelfHostApi.csproj
+++ b/FingerPrintingAPI/SelfHostApi/SelfHostApi.csproj
@@ -34,8 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Bass.Net">
-      <HintPath>..\packages\SoundFingerprinting.Audio.Bass.2.0.0.0\lib\net45\Bass.Net.dll</HintPath>
+    <Reference Include="Bass.Net, Version=2.4.6.4, Culture=neutral, PublicKeyToken=b7566c273e6ef480, processorArchitecture=MSIL">
+      <HintPath>..\packages\SoundFingerprinting.Audio.Bass.2.0.1.0\lib\net45\Bass.Net.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="MathNet.Numerics">
       <HintPath>..\packages\MathNet.Numerics.2.6.2\lib\net40\MathNet.Numerics.dll</HintPath>
@@ -53,20 +54,25 @@
     <Reference Include="Ninject">
       <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
     </Reference>
-    <Reference Include="SoundFingerprinting">
-      <HintPath>..\packages\SoundFingerprinting.2.0.0.0\lib\net45\SoundFingerprinting.dll</HintPath>
+    <Reference Include="SoundFingerprinting, Version=2.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SoundFingerprinting.2.0.1.0\lib\net45\SoundFingerprinting.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="SoundFingerprinting.Audio">
-      <HintPath>..\packages\SoundFingerprinting.Audio.Bass.2.0.0.0\lib\net45\SoundFingerprinting.Audio.dll</HintPath>
+    <Reference Include="SoundFingerprinting.Audio, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SoundFingerprinting.Audio.Bass.2.0.1.0\lib\net45\SoundFingerprinting.Audio.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="SoundFingerprinting.Audio.Bass">
-      <HintPath>..\packages\SoundFingerprinting.Audio.Bass.2.0.0.0\lib\net45\SoundFingerprinting.Audio.Bass.dll</HintPath>
+    <Reference Include="SoundFingerprinting.Audio.Bass, Version=2.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SoundFingerprinting.Audio.Bass.2.0.1.0\lib\net45\SoundFingerprinting.Audio.Bass.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="SoundFingerprinting.Audio.NAudio">
-      <HintPath>..\packages\SoundFingerprinting.Audio.NAudio.2.0.0.0\lib\net45\SoundFingerprinting.Audio.NAudio.dll</HintPath>
+    <Reference Include="SoundFingerprinting.Audio.NAudio, Version=2.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SoundFingerprinting.Audio.NAudio.2.0.1.0\lib\net45\SoundFingerprinting.Audio.NAudio.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="SoundFingerprinting.Infrastructure">
-      <HintPath>..\packages\SoundFingerprinting.Audio.Bass.2.0.0.0\lib\net45\SoundFingerprinting.Infrastructure.dll</HintPath>
+    <Reference Include="SoundFingerprinting.Infrastructure, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SoundFingerprinting.Audio.Bass.2.0.1.0\lib\net45\SoundFingerprinting.Infrastructure.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="SoundFingerprinting.SQL">
       <HintPath>..\packages\SoundFingerprinting.SQL.2.0.0\lib\net45\SoundFingerprinting.SQL.dll</HintPath>
