--- a/BulckSender/BulckSender/App.config
+++ b/BulckSender/BulckSender/App.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="FolderLocation" value="D:\Music\2014Coll\4-Haile Root"/>
-    <add key="OutputPath" value="D:\Music\2014Coll\output.txt"/>
+    <add key="FolderLocation" value="D:\HI-Core\Project related\Measurments from TUD\Leakage_files_new 10mm_sensor_30sec_long"/>
+    <add key="OutputPath" value="D:\HI-Core\Project related\Measurments from TUD\Leakage_files_new 10mm_sensor_30sec_long\output.txt"/>
     <add key="ServiceUrl" value="http://localhost:9999"/>
-    <add key="Filters" value="*.mp3; *.wav; *.ogg; *.flac"/>
+    <add key="Filters" value="*.mp3;*.wav;*.ogg;*.flac"/>
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
