--- a/BulckSender/BulckSender/App.config
+++ b/BulckSender/BulckSender/App.config
@@ -4,7 +4,12 @@
     <add key="FolderLocation" value="D:\HI-Core\Project related\Measurments from TUD\Leakage_files_new 10mm_sensor_30sec_long"/>
     <add key="OutputPath" value="D:\HI-Core\Project related\Measurments from TUD\Leakage_files_new 10mm_sensor_30sec_long\output.txt"/>
     <add key="ServiceUrl" value="http://localhost:9999"/>
-    <add key="Filters" value="*.mp3;*.wav;*.ogg;*.flac"/>
+    <add key="Filters" value=".mp3;.wav;.ogg;.flac"/>
+    
+    <add key="FtpAddress" value=""/>
+    <add key="UserName" value=""/>
+    <add key="Password" value=""/>
+    
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
