--- a/BulckSender/BulckSender/BulckSender.csproj
+++ b/BulckSender/BulckSender/BulckSender.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AudioRequest.cs" />
+    <Compile Include="FtpClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrackData.cs" />
